Updates from Overleaf

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -650,6 +650,18 @@ year = {2021}
   publisher={Elsevier}
 }
 
+@article{marletaz2008chaetognath,
+  title={Chaetognath transcriptome reveals ancestral and unique features among bilaterians},
+  author={Marl{\'e}taz, Ferdinand and Gilles, Andr{\'e} and Caubit, Xavier and Perez, Yvan and Dossat, Carole and Samain, Sylvie and Gyapay, Gabor and Wincker, Patrick and Le Parco, Yannick},
+  journal={Genome Biology},
+  volume={9},
+  number={6},
+  pages={1--18},
+  year={2008},
+  publisher={BioMed Central}
+}
+
+
 %%%%%% INTRO
 
 @misc{red_list,
@@ -2493,6 +2505,25 @@ year = {2015}
   publisher={Cold Spring Harbor Laboratory}
 }
 
+@article{adineta_ricciae,
+  title={Comparative genomics of bdelloid rotifers: insights from desiccating and nondesiccating species},
+  author={Nowell, Reuben W and Almeida, Pedro and Wilson, Christopher G and Smith, Thomas P and Fontaneto, Diego and Crisp, Alastair and Micklem, Gos and Tunnacliffe, Alan and Boschetti, Chiara and Barraclough, Timothy G},
+  journal={PLoS Biology},
+  volume={16},
+  number={4},
+  pages={e2004830},
+  year={2018},
+  publisher={Public Library of Science San Francisco, CA USA}
+}
+
+@article{arion_vulgaris,
+  title={The \textit{de novo} genome of the "Spanish" slug Arion vulgaris Moquin-Tandon, 1855 (Gastropoda: Panpulmonata): massive expansion of transposable elements in a major pest species},
+  author={Chen, Zeyuan and Do{\u{g}}an, {\"O}zg{\"u}l and Guiglielmoni, Nad{\`e}ge and Guichard, Anne and Schr{\"o}dl, Michael},
+  journal={bioRxiv},
+  year={2020},
+  publisher={Cold Spring Harbor Laboratory}
+}
+
 @article{achatina_fulica,
 author = {Guo, Yunhai and Zhang, Yi and Liu, Qin and Huang, Yun and Mao, Guangyao and Yue, Zhiyuan and Abe, Eniola M. and Li, Jian and Wu, Zhongdao and Li, Shizhu and Zhou, Xiaonong and Hu, Wei and Xiao, Ning},
 doi = {10.1093/gigascience/giz124},
@@ -3188,4 +3219,15 @@ year = {2019}
 title = {{NCBI, \url{https://www.ncbi.nlm.nih.gov/}}},
 author = {National Center for Biotechnology Information},
 year = {2021}
+}
+
+@article{chromosight,
+  title={Computer vision for pattern detection in chromosome contact maps},
+  author={Matthey-Doret, Cyril and Baudry, Lyam and Breuer, Axel and Montagne, R{\'e}mi and Guiglielmoni, Nad{\`e}ge and Scolari, Vittore and Jean, Etienne and Campeas, Arnaud and Chanut, Philippe Henri and Oriol, Edgar and others},
+  journal={Nature communications},
+  volume={11},
+  number={1},
+  pages={1--11},
+  year={2020},
+  publisher={Nature Publishing Group}
 }
