--- a/discussion.tex
+++ b/discussion.tex
@@ -1,12 +1,16 @@
 \chapter{Discussion \& Conclusion}
 
+\section{Genome assemblies of non-vertebrate animals}
+
+Genomic resources are constantly growing, however, animal genome projects have been biased towards vertebrates. The wide diversity of non-vertebrate animals brings equal possibilities and difficulties, as protocols and assembly strategies need to be adapted for each project. The genome assemblies presented in this thesis contribute to filling the gap in genomic resources for several clades of non-vertebrate animals. The new genome assembly of \textit{Adineta vaga} is the first chromosome-level assembly of a rotifer species, and is additionally a first instance of Nanopore and Hi-C sequencing for this group; the genome of \textit{Adineta ricciae} \cite{adineta_ricciae} was assembled with PacBio CLR but remained heavily fragmented. As for the chaetognath \textit{Flaccisagitta enflata}, there is not yet any nuclear genome assembly available for the whole phylum. Coral genomes were published recently, which included long reads and Hi-C (the hard coral \textit{Acropora millepora} \cite{acropora_millepora2, hic_genomes} and the soft coral \textit{Xenia} sp. \cite{xenia_sp}), and the genome of \textit{Astrangia poculata} will further enrich coral genomics. As these assemblies have reached chromosome-level scaffolds using Hi-C data, the main scaffolds should be devoid of contaminations, making them robust references for downstream analysis. Annotated genome assemblies represent complete gene sets which can be compared between species to identify orthologs and specific genes. The coral \textit{Astrangia poculata} may have genes that exempt it from symbiosis and make it adaptable to a wide range of temperatures, unlike other corals from the genus Acropora. These chromosome-level assemblies also enable structural analyses of these genomes. The rotifer \textit{Adineta vaga} was already identified as a paleotetraploid, and the genome of \textit{Flaccisagitta enflata} may have similar features, as a prior of study of the transcriptome of the chaetognath \textit{Spadella cephaloptera} suspected a whole-genome duplication event \cite{marletaz2008chaetognath}. \\
+
 \section{Combining long reads and Hi-C for chromosome-level assemblies}
 
 Long reads and Hi-C technologies became in recent years the winning combination, with short-read sequencing, to reach chromosome-level assemblies with high completeness. Long-read sequencing is still more laborious than short reads, due to its requirement for high-molecular-weight DNA, yet long-read assemblies are generally favored for their higher contiguity and better resolution of repeats. However, long reads are often not sufficient to assemble eukaryote genomes into chromosome-level contigs, and a scaffolding step often remains necessary. Increasing the sequencing depth may improve the contiguity to a certain extent, but long-read assemblers do not seem able to take advantage of huge sequencing depths (up to 230X of PacBio CLR and 170X of Nanopore reads in the case of \textit{Adineta vaga}) to fully solve assemblies. Scaffolding is therefore needed, and Hi-C has emerged as the most robust method to bring assemblies to chromosome level. The popularity of Hi-C has stimulated the release of protocols, commercial kits and programs, providing researchers with a variety of options to adapt to their genome projects. The genomes presented here, \textit{Adineta vaga}, \textit{Astrangia poculata} and \textit{Flaccisagitta enflata}, were assembled with a mix of short reads, long reads and Hi-C, and all reached chromosome-level scaffolds with high completeness. The genome assembly of \textit{Flaccisagitta enflata} was the most challenging out of the three due to: its moderate size (694-699 Mb); its high heterozygosity; the low N50 of Nanopore reads; the poor Hi-C mapping rate. Nevertheless, the quality of the final assembly further demonstrates the robustness of the combination of long reads and Hi-C. \\
 
 The amount of Hi-C data and the mapping rates are highly variable among projects (Table \ref{tab:hic_data}). The differences in mapping rates cannot be attributed to read length as the Hi-C reads for \textit{Adineta vaga} are only 66 bp-long (against 150 bp for \textit{Astrangia poculata} and \textit{Flaccisagitta enflata}), but \textit{Adineta vaga} has the highest mapping rate (83\%). In addition, most Hi-C reads of \textit{Adineta vaga} (72\%) were mapped in the first round of iterative mapping, using only 20 bases. The low mapping rate for \textit{Flaccisagitta enflata} may be attributed to the high heterozygosity of the genome and to the use of a different individual rather than the one used for Illumina and Nanopore sequencing. It is unclear what would be the necessary amount of reads for Hi-C scaffolding to obtain chromosome-level scaffolds. The company Arima Genomics recommends 200 millions pairs of Hi-C reads for a $\sim$1-Gb genome. This raw estimation does not take into account the mapping rate nor the fragmentation of the genome, and a thorough review of Hi-C scaffolding should consider these factors to find optimal Hi-C sequencing depths depending on the genome projects. \\
 
-Furthermore, Hi-C reads are generated for scaffolding in genome projects, but they can also be used to explore the 3D architecture of the corresponding genome. As chromosome-level assemblies and Hi-C datasets are accumulating for a wide variety of species, these resources could be compiled into an evolutionary analysis based on the 3D genomes. For instance, a recent study investigated the mechanisms underlying genome folding in 27 species of animals, fungi and plants \cite{hic_genomes}. This analysis targeted eukaryotes in general; it surveyed 20 animals, including 6 vertebrates, and disregarded several metazoan phyla. Recently published non-vertebrate genomes with Hi-C data, such as the sponge \textit{Ephydatia muelleri} \cite{ephydatia_mulleri}, and the ones presented here, could be integrated in a large study of the 3D genomes of animals. \\
+Furthermore, Hi-C reads are generated for scaffolding in genome projects, but they can also be used to explore the 3D architecture of the corresponding genome. As chromosome-level assemblies and Hi-C datasets are accumulating for a wide variety of species, these resources could be compiled into an evolutionary analysis based on the 3D genomes. For instance, the tool Chromosight was used to detect chromatin 3D structures in bacteria, yeasts, and 11 animals \cite{chromosight}. Furthermore, a recent study investigated the mechanisms underlying genome folding in 27 species of animals, fungi and plants \cite{hic_genomes}. This analysis targeted eukaryotes in general; it surveyed 20 animals, including 6 vertebrates, and disregarded several metazoan phyla. Recently published non-vertebrate genomes with Hi-C data, such as the sponge \textit{Ephydatia muelleri} \cite{ephydatia_mulleri}, the echinoderm \textit{Lytechinus variegatus} \cite{lytechinus_variegatus}, the nematode \textit{Caenorhabditis remanei} \cite{caenorhabditis_remanei2}, the slug \textit{Arion vulgaris} \cite{arion_vulgaris}, and the ones presented here, could be integrated in a large study of the 3D genomes of animals. \\
 
 \begin{table}
 \centering
@@ -25,7 +29,9 @@ Furthermore, Hi-C reads are generated for scaffolding in genome projects, but th
 
 \section{Defining a new benchmark dataset: \textit{Adineta vaga}}
 
-New assembly tools are typically benchmarked against the genomes of bacteria or model organisms with a low heterozygosity, such as \textit{Drosophila melanogaster}, \textit{Caenorhabditis elegans}, \textit{Homo sapiens}, and up to a heterozygosity of 1\% for \textit{Arabidopsis thaliana}. Testing new programs on the human genome is however often a requirement for publication (as was the case for GRAAL \cite{graal} and instaGRAAL \cite{instagraal}), as large sequencing datasets of all types are available and this genome is the closest to a perfect assembly, evermore since the release of a gap-less reference \cite{complete_human}. Therefore, these programs are often tuned for low-heterozygosity genomes and can only poorly handle higher levels of heterozygosity. The benchmark of long-read assemblers (Chapter 2) shed light on the limitations of these assemblers on a non-model genome, \textit{Adineta vaga}, with a mixture of low-heterozygosity and high-heterozygosity regions. These assemblers can still lead to high-quality assemblies when combined with pre-assembly filtering or post-assembly haplotig purging. The genome of \textit{Adineta vaga} now has a reliable reference and large PacBio CLR, Nanopore, Illumina, and Hi-C datasets, making it a compelling example for benchmarks of new assembly tools on a mid-heterozygosity genome. These assembly strategies are not exclusive to \textit{Adineta vaga}, and some were used for \textit{Astrangia poculata} and \textit{Flaccisagitta enflata}. Implementing this methodology into an assembly pipeline, including evaluation steps to identify well-collapsed candidate assemblies, would facilitate assembly projects. \\
+New assembly tools are typically benchmarked against the genomes of bacteria or model organisms with a low heterozygosity, such as \textit{Drosophila melanogaster}, \textit{Caenorhabditis elegans}, \textit{Homo sapiens}, and up to a heterozygosity of 1\% for \textit{Arabidopsis thaliana}. Testing new programs on the human genome is however often a requirement for publication (as was the case for GRAAL \cite{graal} and instaGRAAL \cite{instagraal}), as large sequencing datasets of all types are available and this genome is the closest to a perfect assembly, evermore since the release of a gap-less reference \cite{complete_human}. Therefore, these programs are often tuned for low-heterozygosity genomes and can only poorly handle higher levels of heterozygosity. The benchmark of long-read assemblers (Chapter 2) shed light on the limitations of these assemblers on a non-model genome, \textit{Adineta vaga}, with a mixture of low-heterozygosity and high-heterozygosity regions. Long-read assemblers showed distinct behaviors on the same long-read datasets. wtdbg2 yields contigs with few duplications as it eliminates alternative haplotypes in the assembly graph by identifying and removing bubbles, i.e. regions where one homozygous sequence can be connected to several sequences, corresponding to the different haplotypes for one heterozygous region. By contrast, Canu has a more conservative approach to separate repetitions and haplotypes, leading to uncollapsed assemblies. However, all these assemblers can produce high-quality haploid assemblies when combined with pre-assembly filtering or post-assembly haplotig purging. \\
+
+The genome of \textit{Adineta vaga} now has a reliable reference and large PacBio CLR, Nanopore, Illumina, and Hi-C datasets, making it a compelling example for benchmarks of new assembly tools on a mid-heterozygosity genome. These assembly strategies are not exclusive to \textit{Adineta vaga}, and some were used for \textit{Astrangia poculata} and \textit{Flaccisagitta enflata}. Implementing this methodology into an assembly pipeline, including evaluation steps to identify well-collapsed candidate assemblies, would facilitate assembly projects. \\
 
 \section{Decreasing long-read sequencing depth}
 
