--- a/acknowledgements.tex
+++ b/acknowledgements.tex
@@ -3,7 +3,7 @@ The first individual I would like to thank is not a human, but my dog Curie. He 
 
 I would like to thank my supervisors Jean-François Flot and Romain Koszul. Jean-François Flot welcomed me into his team and gave me the means to complete my PhD. I do hope that I lived up to his expectations, and even surpassed them. Funnily, Jean-François and I have opposite opinions on many subjects, which, I think, strengthened our work together. He made me benefit from his wide network and made sure that I would stay busy for many years to come. Romain Koszul welcomed me in his team full-time during the first three months of my PhD. I benefited from his huge knowledge of Hi-C with Aurèle Piazza, Axel Cournac, Cyril Matthey-Doret, Lyam Baudry, Martial Marbouty and Vittore Scolari. More specifically, Cyril Matthey-Doret started his PhD a little after I did, and I always saw him as a comrade-in-arms. I also want to thank Agnès Thierry and Christophe Chapard who took care of my Hi-C libraries and made my projects move forward. \\
 
-I was also well surrounded at the Université libre de Bruxelles and in the EEG team, in particular with Ana Rodriguez-Jimenez, Catalina Ramírez-Portilla and Claire Chauveau. I had the opportunity to supervise Roland Faure during a Master degree internship, and to develop GraphUnzip together; I have no doubt he will succeed in his upcoming PhD too. I want to thank everybody in EBE, for the lunch breaks, and the sadly few game nights and evenings at the Tavernier. I owe many thanks to Laurent Grumiau, without whom I would not have been able to get any experiment done. \\
+I was also well surrounded at the Université libre de Bruxelles and in the EEG team, in particular with Ana Rodriguez-Jimenez, Catalina Ramírez-Portilla and Claire Chauveau. I had the opportunity to supervise Roland Faure during a Master degree internship, and to develop GraphUnzip together; I have no doubt he will succeed in his upcoming PhD too. I want to thank everybody in EBE, Serge Aron, Patrick Mardulyn, Olivier Hardy, Claire Baudoux, Arthur Boom, Nicolas Fontaine, Tania d'Haijere, Nicolas Kaczamrek, Svitlana Lukicheva, Katarina Matvijev, Jérémy Migliore, Florence Rodriguez, Maeva Sorel, for the lunch breaks, and the sadly few game nights and evenings at the Tavernier. I owe many thanks to Laurent Grumiau, without whom I would not have been able to get any experiment done. \\
 
 I was lucky to be part of the Innovative Training Network IGNITE. I remember how intimidated I was during the first Network-wide Training Event, as I had so little knowledge of non-vertebrates due to my bachelor degree in Molecular Biology. I tried to make up for it during my PhD, and I hope that I succeeded. In this program, Michael Eitel was an incredible resource to rely on. I gave him the nickname of the "Babysitter", as his job of Project Manager made him in charge of all IGNITE students. Michi was an anchor through this whole project, as he gave me advice about Nanopore DNA sequencing and RNA sequencing, and I hope that more people will be lucky to receive his advice in the future. Besides, Ramon Rivera-Vicéns and Ferenc Kagan have been my closest friends in the program. One night, after some partying in Split, they took me each by one arm to celebrate together being members of IGNITE, and since we have called ourselves the "Party People". I hope we will have more parties together, whatever the time or the place. \\
 
